--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.2",
         "@tailwindcss/forms": "^0.5.6",
         "@tailwindcss/typography": "^0.5.10"
     }
